jk_spine_model_50183.out
Node: comp-gpu06
Start: 2024-05-07-11:12:47
Working dir: /home/s214725/JK_bachelor

/var/lib/slurm/slurmd/job50183/slurm_script: line 24: /home/s214725/JK_bachelor/.bashrc: No such file or directory
  File "/home/s214725/JK_bachelor/OutlierDetection/our_Preprocessing_2.py", line 124
    return
    ^^^^^^
SyntaxError: 'return' outside function
Done: 2024-05-07-11:12:47
